# danswer

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md.template  CLAUDE.md.template  CONTRIBUTING.md  ct.yaml  docker-bake.hcl  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check-lazy-imports.yml  deployment.yml  docker-tag-beta.yml  docker-tag-latest.yml  helm-chart-releases.yml  nightly-close-stale-issues.yml  nightly-scan-licenses.yml  pr-beta-cherrypick-check.yml  pr-database-tests.yml  pr-external-dependency-unit-tests.yml  pr-helm-chart-testing.yml  pr-integration-tests.yml  pr-jest-tests.yml  pr-mit-integration-tests.yml  pr-playwright-tests.yml  pr-python-checks.yml  pr-python-connector-tests.yml  pr-python-model-tests.yml  pr-python-tests.yml  pr-quality-checks.yml  (+4 more)
backend/: .dockerignore  Dockerfile  Dockerfile.model_server  pyproject.toml  supervisord.conf
contributing_guides/: best_practices.md  contributing_vscode.md  contribution_process.md  dev_setup.md
desktop/: .gitignore  README.md  package-lock.json  package.json
tools/ods/: README.md  go.mod  pyproject.toml
tools/ods/cmd/: cherry-pick.go  root.go  run-ci.go
tools/ods/internal/: _version.py
tools/ods/internal/git/: git.go
tools/ods/internal/lazyimports/: lazyimports.go
tools/ods/internal/openapi/: openapi_schema.py
web/: .dockerignore  .gitignore  Dockerfile  README.md  STANDARDS.md  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
widget/: package-lock.json  package.json
(+1416 files in other folders)
